# Vkav

./: .clang-format  .gitignore  .gitmodules  Audio.cpp  Audio.hpp  CMakeLists.txt  CoreAudio.cpp  Data.cpp  Data.hpp  Image.cpp  Image.hpp  LICENSE.md  Makefile  Proccess.cpp  Proccess.hpp  PulseAudio.cpp  README.md  Render.cpp  Render.hpp  Settings.cpp  Settings.hpp  SignalFunctions.cpp  SignalFunctions.hpp  Vkav.cpp  Vkav.desktop  config  main.cpp  vkav.desktop
.github/workflows/: build.yml
MacOS/: README.md  build.sh
MacOS/Vkav.app/Contents/: Info.plist
MacOS/Vkav.app/Contents/Resources/: vkav.icns
bars/: frag.spv  shader.frag
deb-package/: README.md  build.sh
deb-package/vkav/DEBIAN/: control
deb-package/vkav_0.1-1/DEBIAN/: control
deb-package/vkav_0.2-1/DEBIAN/: control
deb-package/vkav_0.3-1/DEBIAN/: control
include/: Audio.hpp  Calculate.hpp  Data.hpp  Image.hpp  ModuleConfig.hpp  NativeWindowHints.hpp  Proccess.hpp  Process.hpp  Render.hpp  Settings.hpp  Version.hpp.in
radial/: frag.spv  shader.frag
shaders/: shader.vert  vert.spv
shaders/background/: frag.spv  shader.frag
shaders/background (blur)/: config  frag.spv  shader.frag  shader.vert  vert.spv
shaders/background (blur)/1/: frag.spv  shader.frag
shaders/background/1/: frag.spv  shader.frag
shaders/bars/: config  frag.spv  shader.frag
shaders/bars/1/: frag.spv  shader.frag  shader.vert
shaders/eclipse/: config
shaders/eclipse/1/: frag.spv  shader.frag
shaders/eclipse/2/: frag.spv  shader.frag
shaders/graph/: frag.spv  shader.frag
shaders/lasers/: frag.spv  shader.frag
shaders/monstercatBars/: frag.spv  shader.frag
shaders/radial/: config  frag.spv  shader.frag
shaders/radial/1/: frag.spv  shader.frag
shaders/radialFillGraph/: frag.spv  shader.frag
shaders/smoothing/: smoothing.glsl  textureBlur.glsl
shaders/solar eclipse/: config
shaders/solar eclipse/1/: frag.spv  shader.frag
src/: CMakeLists.txt  Calculate.cpp  CoreAudio.cpp  Data.cpp  Image.cpp  ModuleConfig.cpp  PortAudio.cpp  Proccess.cpp  Process.cpp  PulseAudio.cpp  PulseAudioAsync.cpp  Render.cpp  Settings.cpp  Vkav.cpp  WASAPI.cpp  X11.cpp  config  libsoundio.cpp  printf.hpp
src/modules/: vert.spv
src/modules/background/: config
src/modules/background/1/: frag.spv  shader.frag  shader.vert  vert.spv
src/modules/bars/: config
src/modules/bars/1/: frag.spv  shader.frag  shader.vert  vert.spv
src/modules/eclipse/: config
src/modules/eclipse/1/: frag.spv
src/modules/eclipse/2/: frag.spv  shader.frag
src/modules/fragment/: config
src/modules/fragment/1/: frag.spv  shader.frag  shader.vert  vert.spv
src/modules/logo/: config
src/modules/logo/1/: frag.spv  shader.frag
src/modules/mist/: config
src/modules/mist/1/: frag.spv  shader.frag  vert.spv
src/modules/octahedron/: config
src/modules/octahedron 2/: config
src/modules/octahedron 2/1/: frag.spv  shader.frag  shader.vert  vert.spv
src/modules/octahedron 2/2/: frag.spv  shader.frag  shader.vert  vert.spv
src/modules/octahedron 2/3/: frag.spv  shader.vert  vert.spv
src/modules/octahedron/1/: frag.spv  shader.frag  shader.vert  vert.spv
src/modules/orbital/: config
src/modules/orbital/1/: frag.spv  shader.frag
src/modules/radial/: config
src/modules/radial/1/: frag.spv  shader.frag
src/modules/rings/: config
src/modules/rings/1/: frag.spv  shader.frag
src/modules/smoothing/: smoothing.glsl  textureBlur.glsl
src/shaders/background/: config
src/shaders/background (blur)/1/: frag.spv  shader.frag  vert.spv
src/shaders/background/1/: frag.spv  shader.frag  shader.vert
src/shaders/bars/: config
src/shaders/bars/1/: frag.spv  shader.frag  shader.vert  vert.spv
src/shaders/eclipse/: config
src/shaders/eclipse/1/: frag.spv  shader.frag
src/shaders/eclipse/2/: frag.spv  shader.frag
src/shaders/mist/: config
src/shaders/mist/1/: frag.spv  shader.frag  shader.vert  vert.spv
src/shaders/orbital/: config
src/shaders/orbital/1/: frag.spv
src/shaders/radial/: config
src/shaders/radial/1/: frag.spv  shader.frag
src/shaders/rings/: config
src/shaders/rings/1/: frag.spv  shader.frag
src/shaders/smoothing/: smoothing.glsl  textureBlur.glsl
tests/: CMakeLists.txt  CalculateTests.cpp  ParseTests.cpp  SettingsTests.cpp
